fix usuario comentario test